chore: edit post links, remove deploy button

--- a/app/(posts)/notes/posts/2017-year-in-review.mdx
+++ b/app/(posts)/notes/posts/2017-year-in-review.mdx
@@ -16,5 +16,5 @@ time:
 - The ending of ET in September. I’m really sad about it.
 
 
-All "A year in review" posts: [2017](/notes/2017-year-in-review.html) [2018](/notes/2018-year-in-review.html) [2019](/notes/2019-year-in-review.html) [2020](/notes/2020-year-in-review.html) [2021](/notes/2021-year-in-review.html) [2022](/notes/2022-year-in-review.html) 
+All "A year in review" posts: [2017](/notes/2017-year-in-review) [2018](/notes/2018-year-in-review) [2019](/notes/2019-year-in-review) [2020](/notes/2020-year-in-review) [2021](/notes/2021-year-in-review) [2022](/notes/2022-year-in-review) [2023](/notes/2023-year-in-review)
 
