--- a/app/(posts)/notes/posts/2022-year-in-review.mdx
+++ b/app/(posts)/notes/posts/2022-year-in-review.mdx
@@ -20,4 +20,4 @@ There are a lot of things happened in my life this year. However, I try to pick 
 
 I want to give thanks to God and say a thank you to everybody who has supported me this year.
 
-All "A year in review" posts: [2017](/notes/2017-year-in-review.html) [2018](/notes/2018-year-in-review.html) [2019](/notes/2019-year-in-review.html) [2020](/notes/2020-year-in-review.html) [2021](/notes/2021-year-in-review.html) [2022](/notes/2022-year-in-review.html) 
+All "A year in review" posts: [2017](/notes/2017-year-in-review) [2018](/notes/2018-year-in-review) [2019](/notes/2019-year-in-review) [2020](/notes/2020-year-in-review) [2021](/notes/2021-year-in-review) [2022](/notes/2022-year-in-review) [2023](/notes/2023-year-in-review)
