--- a/app/(posts)/notes/content/smart-and-dump-components.mdx
+++ b/app/(posts)/notes/content/smart-and-dump-components.mdx
@@ -26,8 +26,8 @@ Một số nhiệm vụ chính và đặc tính của smart component:
 
 Một ví dụ về smart component.
 
-```typescript
-import React, { useState, useEffect } from "react";
+```tsx
+import { useState, useEffect } from "react";
 import axios from "axios";
 import { HeadingSection } from "./HeadingSection";
 import { DetailsSection } from "./DetailsSection";
@@ -64,13 +64,13 @@ Một số đặc điểm của dumb component:
 
 Ví dụ đơn giản về dumb component.
 
-```typescript
-interface HeadingSectionProps {
+```tsx
+type Props = {
     title: string,
     description: string
 }
 
-export function HeadingSection({title, description}: HeadingSectionProps) {
+export function HeadingSection({title, description}: Props) {
     return (
         <div>
             <h1>{title}</h1>
