--- a/app/(posts)/pages/content/about.mdx
+++ b/app/(posts)/pages/content/about.mdx
@@ -6,12 +6,18 @@ time:
   updated: "2024-10-23T03:53:47.094Z"
 ---
 
-I'm a full-stack developer with over 8 years of experience developing web platforms in Vue.js, Node.js, Golang, and other frameworks, from idea to delivery.
+Hi, I'm Daniel. Welcome to my little digital garden!
 
-I also work as a devops engineer helping other developers to set up dev/stag/prod environments with fully automated CI/CD using GitLab CI/CD, Docker, K8S, Lightsail, and AWS services.
+I'm a full-stack developer with over 8 years of experience developing web platforms from idea to delivery.
 
-I can adapt quickly to new working environments or new cutting-edge technologies.
-
-For leadership skills, I've worked as a team leader for a small team of 5 members. Helped everyone in the team to distribute tasks, deliver/explain managers' ideas, and requirements.
+Right now, I'm working at [Fanzeal](https://fanzeal.com) as a Senior Software Engineer.
 
 Besides working, I love writing because I think sharing is also learning, everyone is deserved to learn from your knowledge and experience.
+
+
+More:
+
+- [Contact me](mailto:me@thien.dev)
+- [GitHub](https://github.com/tatthien)
+- [X (Twitter)](https://x.com/hey_thien)
+
