chore: a lot of things

--- a/app/(posts)/posts/content/4-concepts-of-functional-programming.mdx
+++ b/app/(posts)/posts/content/4-concepts-of-functional-programming.mdx
@@ -8,9 +8,7 @@ time:
   updated: "2024-10-23T04:20:44.951Z"
 ---
 
-<div class="mb-4">
-<img alt="Featured image" src="/img/4-concepts-of-functional-programming/featured.webp" />
-</div>
+![Featured image](/img/4-concepts-of-functional-programming/featured.webp)
 
 Today I spent my spare time learning about functional programming. Here are 4 concepts of that paradigm.
 
