--- a/app/(posts)/posts/content/smart-and-dump-components.mdx
+++ b/app/(posts)/posts/content/smart-and-dump-components.mdx
@@ -17,7 +17,7 @@ Vừa qua mình biết tới khái niệm Smart và dumb component. Bài viết 
 
 Smart component dịch ra tiếng Việt có thể hiểu là component "thông minh", nghe không hay lắm. Nhưng cũng phần nào cho chúng ta thấy component này sẽ giữ nhiều nhiệm vụ về mặt business logic, quản lí dữ liệu.
 
-Một số nhiệm vụ chính và đặc tính của smart component:
+Một số nhiệm vụ chính và đặc tính của smart component
 
 - Chịu trách nhiệm về mặt business logic, quản lí state, kết nối với API để fetch dữ liệu.
 - Smart component sẽ sử dụng nhiều hooks, và thư viện vì nó thường phải giải quyết nhiều logic.
