chore: apply grid layout

--- a/app/(posts)/posts/content/lessons-from-building-weekly-planner-app.mdx
+++ b/app/(posts)/posts/content/lessons-from-building-weekly-planner-app.mdx
@@ -8,7 +8,7 @@ time:
   updated: "2024-10-23T04:20:44.952Z"
 ---
 
-![Featured image](/img/lessons-from-building-weekly-planner-app/featured.webp)
+<Image src="/img/lessons-from-building-weekly-planner-app/featured.webp" alt="Weekly planner app" caption={<span>I copied the layout from <a href="https://tweek.so" target="_blank">tweek.so</a></span>} />
 
 There are some changes in my work since I have free time to build this project. It's a weekly planner and to-do list app that aims to enhance your productivity and keeps track of all your stuff in a week calendar view.
 
