--- a/app/(posts)/posts/content/cam-on-enginethemes.mdx
+++ b/app/(posts)/posts/content/cam-on-enginethemes.mdx
@@ -7,7 +7,7 @@ time:
   updated: "2024-10-23T04:20:44.951Z"
 ---
 
-![EngineThemes](/img/enginethemes.webp)
+<Image src="/img/enginethemes.webp" alt="EngineThemes" caption={<span>Xem full case-study trên <a href="https://www.behance.net/gallery/26353963/EngineThemes-Re-design" href="_blank">Behance</a></span>}/>
 
 EngineThemes (ET) là môi trường làm việc chuyên nghiệp đầu tiên của mình. Đây là nơi giúp mình học hỏi và kinh nghiệm rất nhiều thứ, cũng là nơi mình được làm quen với nhiều người mà cho tới thời điểm này có thể phần nào mối liên hệ đã vượt ngoài giới hạn của công việc.
 
