docs: add post featured image

--- a/app/(posts)/w/content/2024-year-in-review.mdx
+++ b/app/(posts)/w/content/2024-year-in-review.mdx
@@ -5,6 +5,8 @@ description: Nhìn lại một năm 2024 trong công việc và cuộc sống
 tags: recap
 ---
 
+<Image src="https://images.unsplash.com/photo-1699275303964-a9a1a8ae8c6b?q=80&w=1200&auto=format&fit=crop" alt="2024: A year in review" caption={<span>Source <a href="https://unsplash.com/photos/a-close-up-of-a-cell-phone-screen-with-numbers-on-it-mis7syjThUU" target="_blank">unsplash.com</a></span>}/>
+
 Như một thói quen mỗi dịp cuối năm hoặc đầu năm mới mình sẽ dành chút thời gian nhìn lại một năm đã qua với một vài gạch đầu dòng đánh dấu những sự kiện nổi bật của năm đó.
 
 
