chore: update post layout

--- a/app/(posts)/w/content/smart-and-dumb-components.mdx
+++ b/app/(posts)/w/content/smart-and-dumb-components.mdx
@@ -60,7 +60,7 @@ Một số đặc điểm của dumb component:
 - Tập trung vào UI
 - Không có business logic
 - Phải được tái sử dụng (reusable)
-- Data của của dumb component nhận được từ props, nó cũng có state nhưng state để control mặt UI. Ví dụ show/hide element.
+- Data của của dumb component nhận được từ props, nó cũng có state nhưng state để control UI. Ví dụ show/hide element.
 
 Ví dụ đơn giản về dumb component.
 
