feat: add image zoomable effect

--- a/app/(posts)/w/content/thuat-toan-boyer-moore-majority-vote.mdx
+++ b/app/(posts)/w/content/thuat-toan-boyer-moore-majority-vote.mdx
@@ -5,7 +5,7 @@ description: Thuật toán tìm phần tử xuất hiện nhiều nhất trong m
 tags: recap
 ---
 
-![Boyer-Moore](/img/boyer-moore.svg)
+<Image src="/img/boyer-moore.svg" alt="Boyer-Moore majority vote"/>
 
 Mấy ngày trở lại đây mình dành thời gian để giải các problem trên [Leetcode](https://leetcode.com/u/heythien/). Mình tham gia chủ yếu để nắm vững hơn về thuật toán, cũng như nâng cao khả năng tư duy trong lập trình.
 
