chore: tweaking UI

--- a/app/(posts)/w/content/deploy-simple-mock-api-using-json-server-caddy.mdx
+++ b/app/(posts)/w/content/deploy-simple-mock-api-using-json-server-caddy.mdx
@@ -105,4 +105,4 @@ your-site.com {
 }
 ```
 
-Lưu ý vì dùng `localhost:5005` thì chúng ta phải lấy tên của container được setup trong `docker-compose`, trong trường hợp này mình đặt tên là `node`. Như vậy, mỗi khi mình truy cập vào `your-site.com`, thì Caddy sẽ điều hướng tới tới mock API đang chạy.
+Lưu ý thay vì dùng `localhost:5005` thì chúng ta phải lấy tên của container được setup trong `docker-compose`, trong trường hợp này mình đặt tên là `node`. Như vậy, mỗi khi mình truy cập vào `your-site.com`, thì Caddy sẽ điều hướng tới tới mock API đang chạy.
