chore: tweaking UI

--- a/app/(posts)/w/content/smart-and-dumb-components.mdx
+++ b/app/(posts)/w/content/smart-and-dumb-components.mdx
@@ -26,7 +26,7 @@ Một số nhiệm vụ chính và đặc tính của smart component
 
 Một ví dụ về smart component.
 
-```tsx
+```tsx showLineNumbers
 import { useState, useEffect } from "react";
 import axios from "axios";
 import { HeadingSection } from "./HeadingSection";
@@ -64,7 +64,7 @@ Một số đặc điểm của dumb component:
 
 Ví dụ đơn giản về dumb component.
 
-```tsx
+```tsx showLineNumbers
 type Props = {
     title: string,
     description: string
