chore: tweaking UI

--- a/app/(posts)/w/content/4-concepts-of-functional-programming.mdx
+++ b/app/(posts)/w/content/4-concepts-of-functional-programming.mdx
@@ -12,10 +12,10 @@ time:
 
 Today I spent my spare time learning about functional programming. Here are 4 concepts of that paradigm.
 
-- Pure functions and idempotent
-- Side effects
-- Function composition
-- Shared state and immutable data
+1. Pure functions and idempotent
+2. Side effects
+3. Function composition
+4. Shared state and immutable data
 
 Let's go through each concept to know what it is!
 
