--- a/app/(posts)/w/content/deploy-simple-mock-api-using-json-server-caddy.mdx
+++ b/app/(posts)/w/content/deploy-simple-mock-api-using-json-server-caddy.mdx
@@ -99,7 +99,7 @@ http://localhost:5005/products
 
 Tới bước này, chúng ta đã có thể sử dụng mock API nhưng chỉ hoạt động bên trong môi trường Docker. Vì vậy một việc cuối cùng cần làm đó là setup [reverse proxy](https://caddyserver.com/docs/quick-starts/reverse-proxy) để bên ngoài có thể truy cập vào `node:5005`. Bên dưới là cấu hình `Caddyfile` của mình:
 
-```caddyfile showLineNumbers
+```caddyfile
 your-site.com {
   reverse_proxy node:5005
 }
