docs: update post content

--- a/app/(posts)/w/content/kubeconfig-eks.mdx
+++ b/app/(posts)/w/content/kubeconfig-eks.mdx
@@ -8,6 +8,8 @@ time:
   updated: "2024-10-30T04:44:56.258Z"
 ---
 
+Just a quick note on how to setup the kubeconfig file for AWS EKS.
+
 ## Update kubeconfig
 
 Create kube config file using `aws eks update-kubeconfig`. Make sure to define the variable `KUBECONFIG` that points to your desired kube config location.
